--- a/iptweb/iptsite/templates/iptsite/compile.html
+++ b/iptweb/iptsite/templates/iptsite/compile.html
@@ -2,135 +2,142 @@
 
 {% block activetab %}
 <div class="container">
-  <ul class="nav nav-tabs">
-	    	<li><a data-toggle="tab" href="terminal">Terminal</a></li>
-	    	<li class="active"><a data-toggle="tab" href="compile">Compile</a></li>
-		    <li><a data-toggle="tab" href="run">Run</a></li>
-		    <li><a data-toggle="tab" href="history">Job History</a></li>
-		    <li><a data-toggle="tab" href="help">Help</a></li>
-	</ul>
-{% endblock %}
-{% block body %}
-	<!-- Compile Tab -->
-{% block header %}
-	<h1>Launching a Compile Job</h1>
-{% endblock %}
-{% block headersum %}
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-{% endblock %}
-<div id="compile" class="tab-pane fade in active">
+    <ul class="nav nav-tabs">
+        <li><a data-toggle="tab" href="terminal">Terminal</a></li>
+        <li class="active"><a data-toggle="tab" href="compile">Compile</a></li>
+        <li><a data-toggle="tab" href="run">Run</a></li>
+        <li><a data-toggle="tab" href="history">Job History</a></li>
+        <li><a data-toggle="tab" href="help">Help</a></li>
+    </ul>
+    {% endblock %}
+    {% block body %}
+    <!-- Compile Tab -->
+    {% block header %}
+    <h1>Launching a Compile Job</h1>
+    {% endblock %}
+    {% block headersum %}
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur.</p>
+    {% endblock %}
+    <div id="compile" class="tab-pane fade in active">
 
-{% block form-group %}
-<div class="container">
-	<form method="POST" action="/compile">{% csrf_token %}
-		<div class="form-group">
-			<div class="form-group">
-			    <label for="ccommand">Command:</label>
-			    <input type="ccommand" class="form-control" id="ccommand" placeholder="Enter $command" name="ccommand" required>
-			    <!-- Table to display command input options -->
-			    <table class="table-condensed">
-			    	<thead>
-			    		<tr>
-					    	<th>If using</th>
-					    	<th>Enter</th>
-				    	</tr>
-				    </thead>
-				    <tbody>
-				    	<tr>
-				    		<td>serial, C:</td>
-				    		<td>icc</td>
-				    	</tr>
-				    	<tr>
-				    		<td>serial, C++:</td>
-				    		<td>icpc</td>
-				    	</tr>
-				    	<tr>
-				    		<td>MPI, C:</td>
-				    		<td>mpicc</td>
-				    	</tr>
-				    	<tr>
-				    		<td>MPI, C++:</td>
-				    		<td>mpicxx</td>
-				    	</tr>
-				    	<tr>
-				    		<td>Open MP, C:</td>
-				    		<td>icc -qopenmp</td>
-				    	</tr>
-				    	<tr>
-				    		<td>Open MP, C++:</td>
-				    		<td>icpc -qopenmp</td>
-				    	</tr>
-				    	<tr>
-				    		<td>CUDA:</td>
-				    		<td>nvcc</td>
-				    	</tr>
-				    </tbody>
+        {% block form-group %}
+        <div class="container">
+            <form method="POST" action="/compile">{% csrf_token %}
+                <div class="form-group">
+                    <div class="form-group">
+                        <label for="ccommand">Command:</label>
+                        <input type="ccommand" class="form-control" id="ccommand" placeholder="Enter $command"
+                               name="ccommand" required>
+                        <!-- Table to display command input options -->
+                        <table class="table-condensed">
+                            <thead>
+                            <tr>
+                                <th>If using</th>
+                                <th>Enter</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>serial, C:</td>
+                                <td>icc</td>
+                            </tr>
+                            <tr>
+                                <td>serial, C++:</td>
+                                <td>icpc</td>
+                            </tr>
+                            <tr>
+                                <td>MPI, C:</td>
+                                <td>mpicc</td>
+                            </tr>
+                            <tr>
+                                <td>MPI, C++:</td>
+                                <td>mpicxx</td>
+                            </tr>
+                            <tr>
+                                <td>Open MP, C:</td>
+                                <td>icc -qopenmp</td>
+                            </tr>
+                            <tr>
+                                <td>Open MP, C++:</td>
+                                <td>icpc -qopenmp</td>
+                            </tr>
+                            <tr>
+                                <td>CUDA:</td>
+                                <td>nvcc</td>
+                            </tr>
+                            </tbody>
 
-			    </table>
-			    <!-- Error handling -->
-				  {% if command_error %}
-				  <div class="error">
-					<p>There was an error: {{ command_error }}</p>
-				  </div>
-				  {% endif %}
-				  {% if compile_error %}
-				  <div class="error">
-					<p>There was an error: {{ compile_error }}</p>
-				  </div>
-				  {% endif %}
-			</div>
-			<div class="form-group">
-			    <label for="driver">Driver:</label>
-			    <input type="driver" class="form-control" id="driver" name="driver" required>
-				  {% if driver_error %}
-				  <div class="error">
-					<p>There was an error: {{ driver_error }}</p>
-				  </div>
-				  {% endif %}
-			</div>
-			<div class="form-group">
-			    <label for="outfiles">Output File(s):</label>
-			    <input type="outfiles" class="form-control" id="outfiles" placeholder="a.out" name="outfiles" required>
-				{% if outfiles_error %}
-				<div class="error">
-					<p>There was an error: {{ outfiles_error }}</p>
-				</div>
-				{% endif %}
-			</div>
-			<div class="form-group">
-			    <label for="addfiles">Additional Files:</label>
-			    <input type="addfiles" class="form-control" id="addfiles" placeholder="Add additional files or folders" name="addfiles">
-			</div>
-			<div>
+                        </table>
+                        <!-- Error handling -->
+                        {% if command_error %}
+                        <div class="error">
+                            <p>There was an error: {{ command_error }}</p>
+                        </div>
+                        {% endif %}
+                        {% if compile_error %}
+                        <div class="error">
+                            <p>There was an error: {{ compile_error }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <label for="driver">Driver:</label>
+                        <input type="driver" class="form-control" id="driver" name="driver" required>
+                        {% if driver_error %}
+                        <div class="error">
+                            <p>There was an error: {{ driver_error }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <label for="outfiles">Output File(s):</label>
+                        <input type="outfiles" class="form-control" id="outfiles" placeholder="a.out" name="outfiles"
+                               required>
+                        {% if outfiles_error %}
+                        <div class="error">
+                            <p>There was an error: {{ outfiles_error }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <label for="addfiles">Additional Files:</label>
+                        <input type="addfiles" class="form-control" id="addfiles"
+                               placeholder="Add additional files or folders" name="addfiles">
+                    </div>
+                    <div>
 			    <span id="fileselector">
 			        <label class="btn btn-default" for="upload-file-selector">
-			            <input id="upload-file-selector" type="file">
-			            <i class="fa_icon icon-upload-alt margin-correction"></i>Upload
-			        </label>
+                        <input id="upload-file-selector" type="file">
+                        <i class="fa_icon icon-upload-alt margin-correction"></i>Upload
+                    </label>
 			    </span>
-			</div>
-			<div class="form-group">
-			    <label for="commargs">Command Args:</label>
-			    <input type="commargs" class="form-control" id="commargs" placeholder="$args" name="commargs" required>
-				{% if commargs_error %}
-				<div class="error">
-					<p>There was an error: {{ commargs_error }}</p>
-				</div>
-				{% endif %}
-			</div>
-			<h4>This is your command:</h4>
-			<div class="text-right">
-				<button type="submit" class="btn btn-default">Compile Code</button>
-			</div>
-			<div class="modal">
-				
-			</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="commargs">Command Args:</label>
+                        <input type="commargs" class="form-control" id="commargs" placeholder="$args" name="commargs"
+                               required>
+                        {% if commargs_error %}
+                        <div class="error">
+                            <p>There was an error: {{ commargs_error }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    <h4>This is your command:</h4>
 
-		</div>
-	</form>
-</div>
-{% endblock %}		  	
-<!-- 		  	</form>
-		</div>
-	</div> -->
-{% endblock %}
+                    <div class="text-right">
+                        <button type="submit" class="btn btn-default">Compile Code</button>
+                    </div>
+                    <div class="modal">
+
+                    </div>
+
+                </div>
+            </form>
+        </div>
+        {% endblock %}
+        <!-- 		  	</form>
+                </div>
+            </div> -->
+        {% endblock %}
