General code clean up and fixes.

--- a/iptweb/iptsite/templates/iptsite/history.html
+++ b/iptweb/iptsite/templates/iptsite/history.html
@@ -39,7 +39,7 @@
             <tr>
                 <td>{{ job.id }}</td>
                 <td>{{ job.name }}</td>
-                <td>{{ job.status }}}</td>
+                <td>{{ job.status }}</td>
                 <td>{{ job.startTime }}</td>
                 <td>{{ job.endTime }}</td>
                 <td></td>
